# tentacle-app

./: .env.example  .gitignore  AGENTS.md  BUILD.md  CONTRIBUTING.md  CORE_CLI_PLAN.md  Cargo.toml  README.md  RELEASE.md  business-plan.md  landing-style-suggestions.md  tentacle-banner.txt
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: app-release.yml  cli-release.yml
cli/: .env.local  Cargo.toml  README.md  build.rs
cli/src/: auto_tagging.rs  cli.rs  errors.rs  main.rs  notifications.rs  output.rs  progress.rs
cli/tests/: agent_cli_flows.rs
core/: Cargo.toml
core/src/: config.rs  document_cache.rs  document_folders.rs  document_store.rs  embeddings.rs  knowledge_base.rs  lib.rs  text_processing.rs  trash.rs
docs/: README.md  WIX_UPGRADE_CODE.md  architecture-overview.md  cli-command-contract.md  core-api-contracts.md  core-cli-agent-guide.md  dev-setup-modes.md  frontend-runtime-boundaries.md  local-storage-and-data-model.md  search-and-embeddings.md  supabase-schema-and-rls.md  tauri-command-contract.md  tauri-core-command-map.md  testing-and-validation-playbook.md
frontend/: .env.local  eslint.config.mjs  middleware.ts  next.config.ts  package-lock.json  package.json  proxy.ts
frontend/app/: globals.css  layout.tsx  manifest.ts  page.tsx
frontend/app/app/: page.tsx
frontend/app/login/: page.tsx
frontend/app/reset-password/: page.tsx
frontend/app/signup/: page.tsx
frontend/components/: voice-capture.tsx
frontend/components/account/: my-account-modal.tsx
frontend/components/auth/: login-form.tsx  password-reset-confirm.tsx  password-reset-form.tsx  signup-form.tsx
frontend/components/documents/: document-card.tsx  document-editor.tsx  document-grid.tsx  document-tag-filters.tsx  editor-toolbar.tsx  folder-breadcrumbs.tsx  folder-card.tsx  folder-form-dialog.tsx  grid-create-menu.tsx  input-source-cards.tsx  move-document-dialog.tsx  new-document-card.tsx  trash-item-card.tsx
frontend/components/notifications/: update-notification-popup.tsx
frontend/components/onboarding/: api-key-banner.tsx
frontend/components/providers/: app-notifications-provider.tsx  console-bridge-provider.tsx  embedding-model-startup-gate.tsx
frontend/components/settings/: settings-modal.tsx
frontend/components/ui/: app-toaster.tsx  button.tsx  confirm-dialog.tsx  error-toast.tsx  liquid-text.tsx
frontend/hooks/: use-voice-recording.ts
frontend/lib/account/: pro-plan.ts  profile.ts
frontend/lib/ai/: auto-tagging.ts  (+4 more)
frontend/public/: sw.js
frontend/src-tauri/: Cargo.toml  Info.plist  clean-build.sh  tauri.conf.json
frontend/types/: documents.ts  notifications.ts
scripts/: release-mac-silicon.sh  release.sh  seed_stresstest_data.sh
skill/: SKILL.md
specs/TEN-10-add-whisper-integration-byok/: spec.toon
specs/TEN-11-implement-document-tags/: spec.toon
specs/TEN-13-tag-filters/: spec.toon
specs/TEN-14-embeddings-and-auto-tagging/: spec.toon
specs/TEN-31-add-notification-system/: spec.toon
specs/TEN-33-create-tentacle-cli/: commands.md  spec.toon
specs/TEN-34-further-folder-improvements/: spec.toon
specs/TEN-34-sub-folder-organization/: spec.toon
specs/TEN-36-add-auth-in-the-app/: spec.md  spec.toon
specs/TEN-38-pre-launch-optimization/: benchmark-notes.md  plan.md  spec.md  spec.xml
specs/TEN-5-auth/: architecture.md  research.md  spec.md
specs/TEN-6-local-docs/: spec.toon
specs/TEN-6-plan-the-local-first-document-store-with-cloud-sync/: research.md
specs/TEN-8-tauri-desktop-app/: acceptance-criteria.json  architecture.md  plan.md  qa-report.md  research.md  spec.md
specs/TEN-9-local-configs/: spec.toon
supabase/: config.toml  seed.sql
supabase/migrations/: 001_initial_schema.sql  002_documents.sql  003_notifications.sql
(+33 files in other folders)
