[package]
name = "tentacle-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tentacle"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
tentacle-core = { path = "../core" }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.14"
