[package]
name = "tentacle-cli"
version = "0.1.0"
edition = "2021"
description = "Tentacle CLI for terminal and AI-agent workflows"
license = "MIT"
repository = "https://github.com/polvera-org/tentacle-app"

[[bin]]
name = "tentacle"
path = "src/main.rs"

[package.metadata.dist]
dist = true

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
tentacle-core = { path = "../core" }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
indicatif = "0.17"
dotenvy = "0.15"

[build-dependencies]
dotenvy = "0.15"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.14"
